--- a/Builds/VisualStudio2015/resources.rc
+++ b/Builds/VisualStudio2015/resources.rc
@@ -14,6 +14,7 @@ BEGIN
     BLOCK "040904E4"
     BEGIN
       VALUE "CompanyName",  "Organic Orchestra\0"
+      VALUE "LegalCopyright",  "Organic Orchestra\0"
       VALUE "FileDescription",  "LGML\0"
       VALUE "FileVersion",  "1.2.4\0"
       VALUE "ProductName",  "LGML\0"
