--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,6 +2,8 @@ version: 1.0.{build}
 branches:
   only:
   - feature/ci
+  - develop
+
 environment:
   ASIOSDK: C:\projects\ASIOSDK2.3
   matrix:
@@ -25,6 +27,14 @@ before_build:
     wget http://www.steinberg.net/sdk_downloads/asiosdk2.3.zip -OutFile ASIO_SDK.zip
     7z x ASIO_SDK.zip -o"C:\projects" -y
 
+
+after_build:
+  cmd: 7z a %APPVEYOR_BUILD_FOLDER%\LGML_%PLATFORM%.zip %APPVEYOR_BUILD_FOLDER%\Builds\VisualStudio2015\%PLATFORM%\%CONFIGURATION%\App\*.exe
+  
+artifacts:
+  - path: LGML_$(platform).zip
+
 build:
   project: Builds/VisualStudio2015/LGML.sln
   verbosity: minimal
+  parallel: true
