--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,7 @@ jobs:
   build_rasp:
     working_directory: ~/LGML
     docker:
-      - image: codingwell/rpi-raspbian-qemu
+      - image: armv7/armhf-ubuntu
         environment:
           TARGET_CPU: armhf
           TARGET_ARCH: -march=armv6 -mfpu=vfp -mfloat-abi=hard # arch for JUCEs linux makefile
@@ -78,10 +78,8 @@ jobs:
       - run:
           name: build and package LGMLRasp
           command: |
-            cross-build-start
             python Scripts/buildScript.py --package --exportpath="$DST_LGML_PATH" --os=linux;
             ldd ~/LGML/Builds/LinuxMakefile/build/LGML > "$DST_LGML_PATH/dependencies.txt"
-            cross-build-end
       - store_artifacts:
           path: /tmp/buildRasp/
 
@@ -92,6 +90,7 @@ workflows:
     jobs:
       - build
       - build32
+      - buildRasp
 
 
 general:
