--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,9 @@ jobs:
       - run:
           name: install LGMLRasp dependencies
           command: |
-            . /etc/lsb-release && echo "deb http://ports.ubuntu.com/ubuntu-ports/ $DISTRIB_CODENAME main" >> /etc/apt/sources.list
+            set -x
+            . /etc/lsb-release && echo "deb [arch=armhf] http://ports.ubuntu.com/ubuntu-ports/ $DISTRIB_CODENAME main" >> /etc/apt/sources.list
+            cat /etc/apt/sources.list
             apt-get -qq update
             apt-get install -y git
             git submodule update --init --recursive
