--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,7 +72,8 @@ jobs:
           name: install LGMLRasp dependencies
           command: |
             set -x
-            . /etc/lsb-release && echo "deb [arch=armhf] http://ports.ubuntu.com/ubuntu-ports/ $DISTRIB_CODENAME main" >> /etc/apt/sources.list
+            dpkg --add-architecture armhf
+            . /etc/lsb-release && echo "deb [arch=armhf] ports.ubuntu.com/ubuntu-ports $DISTRIB_CODENAME main universe restricted multiverse" >> /etc/apt/sources.list
             cat /etc/apt/sources.list
             apt-get -qq update
             apt-get install -y git
