--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,6 +76,7 @@ jobs:
             apt-get -qq update
             apt-get install -y gcc-arm-linux-gnueabihf
             apt-get install -y g++-arm-linux-gnueabihf
+            apt-get install -y pkg-config
             apt-get install -y git
             git submodule update --init --recursive
             . /etc/lsb-release
