--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,7 +63,7 @@ jobs:
       - image: ubuntu
         environment:
           TARGET_CPU: armhf
-          TARGET_ARCH: -march=armv7 -mfpu=vfp -mfloat-abi=hard # arch for JUCEs linux makefile -> armv7 or 6?
+          TARGET_ARCH: -mcpu=cortex-a53 -mfpu=neon-fp-armv8 -mfloat-abi=hard # arch for JUCEs linux makefile -> RPI3
           DST_LGML_PATH: /tmp/buildRasp/
 
     steps:
@@ -74,7 +74,6 @@ jobs:
             set -x
             
             apt-get -qq update
-            apt-get install -y gcc-arm-linux-gnueabihf
             apt-get install -y g++-arm-linux-gnueabihf
             apt-get install -y pkg-config
             apt-get install -y git
@@ -90,9 +89,9 @@ jobs:
           name: build and package LGMLRasp
           command: |
             set -x
-            echo $PKG_CONFIG_PATH
+            export PKG_CONFIG_PATH=/usr/lib/arm-linux-gnueabihf/pkgconfig
             export CXX=arm-linux-gnueabihf-g++
-            python Scripts/buildScript.py --package --exportpath="$DST_LGML_PATH" --os=linux;
+            python Scripts/buildScript.py --package --configuration=Release --exportpath="$DST_LGML_PATH" --os=linux;
             ldd ~/LGML/Builds/LinuxMakefile/build/LGML > "$DST_LGML_PATH/dependencies.txt"
       - store_artifacts:
           path: /tmp/buildRasp/
