--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,10 +72,8 @@ jobs:
           name: install LGMLRasp dependencies
           command: |
             set -x
-            
             apt-get -qq update
-            apt-get install -y g++-arm-linux-gnueabihf
-            apt-get install -y pkg-config
+            apt-get install -y g++-arm-linux-gnueabihf pkg-config
             apt-get install -y git
             git submodule update --init --recursive
             . /etc/lsb-release
@@ -83,8 +81,8 @@ jobs:
             echo "deb-src [arch=armhf] http://ports.ubuntu.com/ubuntu-ports $DISTRIB_CODENAME main universe restricted multiverse" >> /etc/apt/sources.list
             echo "deb [arch=armhf] http://ports.ubuntu.com/ubuntu-ports $DISTRIB_CODENAME-updates main universe restricted multiverse" >> /etc/apt/sources.list
             echo "deb-src [arch=armhf] http://ports.ubuntu.com/ubuntu-ports $DISTRIB_CODENAME-updates main universe restricted multiverse" >> /etc/apt/sources.list
-            cat /etc/apt/sources.list
             sh Scripts/linux/installDeps.sh && sh Scripts/linux/installDevDeps.sh
+
       - run:
           name: build and package LGMLRasp
           command: |
@@ -92,7 +90,8 @@ jobs:
             export PKG_CONFIG_PATH=/usr/lib/arm-linux-gnueabihf/pkgconfig
             export CXX=arm-linux-gnueabihf-g++
             python Scripts/buildScript.py --package --configuration=Release --exportpath="$DST_LGML_PATH" --os=linux;
-            ldd ~/LGML/Builds/LinuxMakefile/build/LGML > "$DST_LGML_PATH/dependencies.txt"
+            arm-linux-gnueabihf-objdump -x ~/LGML/Builds/LinuxMakefile/build/LGML | grep NEEDED > "$DST_LGML_PATH/dependencies.txt"
+
       - store_artifacts:
           path: /tmp/buildRasp/
 
@@ -102,8 +101,8 @@ workflows:
   build_all_platforms:
     jobs:
       - build_rasp
-# - build
-# - build32
+      - build
+      - build32
 
 
 
