CCi : remove old configuration name fix unix endings in files

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
       - run:
           name: build and package LGML
           command: |
-            python Scripts/buildScript.py --build --package --exportpath="$DST_LGML_PATH" --os=linux --configuration=Ubuntu;
+            python Scripts/buildScript.py --build --package --exportpath="$DST_LGML_PATH" --os=linux --configuration=Release;
             ldd /root/LGML/Builds/LinuxMakefile/build/LGML > "$DST_LGML_PATH/dependencies.txt"
       - store_artifacts:
           path: /tmp/build/
@@ -48,7 +48,7 @@ jobs:
       - run:
           name: build and package LGML32
           command: |
-            python Scripts/buildScript.py --package --exportpath="$DST_LGML_PATH" --os=linux;
+            python Scripts/buildScript.py --package --exportpath="$DST_LGML_PATH" --os=linux --configuration=Release;
             ldd /root/LGML/Builds/LinuxMakefile/build/LGML > "$DST_LGML_PATH/dependencies.txt"
       - store_artifacts:
           path: /tmp/build32 #$DST_LGML_PATH
