--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -7,22 +7,20 @@ branches:
 environment:
   ASIOSDK: C:\projects\ASIOSDK2.3
   image: Visual Studio 2015
+  PYTHON: "C:\\Python34-x64"
+  PYTHON_VERSION: "3.4.x" # currently 3.4.3
+  PYTHON_ARCH: "64"
   matrix:
     - platform: Win32
       configuration: Release_32bit
-      PYTHON: "C:\\Python34-x64"
-      PYTHON_VERSION: "3.4.x" # currently 3.4.3
-      PYTHON_ARCH: "64"
     - platform: x64
       configuration: Release
-      PYTHON: "C:\\Python34-x64"
-      PYTHON_VERSION: "3.4.x" # currently 3.4.3
-      PYTHON_ARCH: "64"
 
 before_build:
   cmd: |
-    python --version
-    python -c \"import struct; print(struct.calcsize('P') * 8)\"
+    "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
+    "python --version"
+    "python -c \"import struct; print(struct.calcsize('P') * 8)\""
   ps: |
     echo "submodule"
     git submodule -q update --init --recursive
