--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,8 +16,8 @@ environment:
 
 before_build:
   ps: |
-    "python --version"
-    "pip install future"
+    python --version
+    pip install future
     echo "submodule"
     git submodule -q update --init --recursive
     cd C:\projects\lgml\third_party\rubberband
