--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,8 +15,8 @@ environment:
       configuration: Release
 
 before_build:
-  - cmd: python --version
-  - cmd: pip install future
+  - "python --version"
+  - "pip install future"
   - ps: |
     echo "submodule"
     git submodule -q update --init --recursive
